test_suite/tests/ui/precondition/deserialize_de_lifetime.rs
use serde_derive::Deserialize;

#[derive(Deserialize)]
struct S<'de> {
    s: &'de str,
}

fn main() {}
